--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knpw.rs",
+  "name": "seungheondoh",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.jsx src gatsby-config.js gatsby-node.js",
@@ -9,7 +9,7 @@
     "preserve": "npm run build",
     "serve": "gatsby serve"
   },
-  "author": "Kenneth Powers <ken@kenpowers.net>",
+  "author": "seungheondoh <seungheondoh@kaist.ac.kr>",
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "^10.0.5",
@@ -17,6 +17,12 @@
     "dateformat": "^2.0.0",
     "emotion-theming": "^10.0.5",
     "gatsby": "^2.0.77",
+    "gatsby-plugin-typography": "^2.2.10",
+    "gatsby-remark-highlights": "^1.3.4",
+    "gatsby-remark-katex": "^3.0.4",
+    "gatsby-remark-vscode-embed": "^1.0.4",
+    "katex": "^0.10.1",
+    "language-rust": "^0.4.12",
     "lato-font": "^3.0.0",
     "lodash": "^4.17.11",
     "prismjs": "^1.15.0",
@@ -25,7 +31,9 @@
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.1.3",
-    "sanitize.css": "^5.0.0"
+    "react-typography": "^0.16.19",
+    "sanitize.css": "^5.0.0",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "eslint": "^5.11.1",
@@ -46,9 +54,9 @@
     "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-remark-copy-linked-files": "^2.0.8",
     "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-prismjs": "^3.1.4",
-    "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-remark": "^2.1.17",
+    "gatsby-remark-prismjs": "^3.2.5",
+    "gatsby-source-filesystem": "^2.0.26",
+    "gatsby-transformer-remark": "^2.3.4",
     "rimraf": "^2.6.1"
   }
 }
