--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.0.77",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-typography": "^2.2.10",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-prismjs-dracula": "^0.1.15",
     "gatsby-remark-highlights": "^1.3.4",
     "gatsby-remark-katex": "^3.0.4",
